fix: async helmet librarymargin (mobile) and collapse-menu gap (housing page)

--- a/projet_6_kasa/src/sass/components/_cardsContainer.component.scss
+++ b/projet_6_kasa/src/sass/components/_cardsContainer.component.scss
@@ -8,7 +8,6 @@ $background-color: #f6f6f6;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 92%;
         grid-gap: 1rem;
     }
 
