--- a/projet_6_kasa/src/sass/pages/_housing.page.scss
+++ b/projet_6_kasa/src/sass/pages/_housing.page.scss
@@ -73,6 +73,7 @@ $main-color: #ff6060;
         .housing-body__collapses-container {
             display: flex;
             justify-content: space-between;
+            gap: 1rem
         }
     
     }
